Regression: crash when opening file that has (physics) modifier on library override object #98283

Closed
opened 2022-05-20 11:26:42 +02:00 by Oliver Feiler · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59

Blender Version
Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: cc66d1020c
Worked: 3.0.1

Same thing did not crash before 8f9f65bc29

Short description of error
Adding at least a collision physics to a library override crashes on opening the file

Exact steps for others to reproduce the error

  • New file 1, delete camera and light, save
  • New file 2, delete everying
  • File -> Link -> File 1 -> Collection
  • Objects -> Relations -> Make Library Override from the linked object
  • Add Physics -> Collision to the overriden object (make the overidden object editable from the Outliner beforehand if neccessary -- needed since 5596f79821)
  • Save file, exit
  • Open the file again, blender will crash

Example attached, put test.blend and source.blend into the same directory and open test.blend
The file opens if the link to source is broken by moving them to different directories

Stack trace:
blender.exe :0x00007FF673A61B30 rna_Object_modifiers_override_apply
blender.exe :0x00007FF673A17E60 rna_property_override_operation_apply
blender.exe :0x00007FF673A16690 RNA_struct_override_apply
blender.exe :0x00007FF6735A0EB0 BKE_lib_override_library_main_update
blender.exe :0x00007FF673725D20 blo_read_file_internal
blender.exe :0x00007FF67375F550 BLO_read_from_file
blender.exe :0x00007FF678A17190 BKE_blendfile_read
blender.exe :0x00007FF6736E2010 WM_file_read
blender.exe :0x00007FF6733414D0 arg_handle_load_file
blender.exe :0x00007FF678894C10 BLI_args_parse
blender.exe :0x00007FF6733403C0 main
blender.exe :0x00007FF678A0FE74 __scrt_common_main_seh
KERNEL32.DLL :0x00007FFB9C3E7020 BaseThreadInitThunk
ntdll.dll :0x00007FFB9DB22630 RtlUserThreadStart

test.blend

test.crash.txt

source.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.59 **Blender Version** Broken: version: 3.1.2, branch: master, commit date: 2022-03-31 17:40, hash: `cc66d1020c` Worked: 3.0.1 Same thing did not crash before 8f9f65bc29 **Short description of error** Adding at least a collision physics to a library override crashes on opening the file **Exact steps for others to reproduce the error** - New file 1, delete camera and light, save - New file 2, delete everying - File -> Link -> File 1 -> Collection - Objects -> Relations -> Make Library Override from the linked object - Add Physics -> Collision to the overriden object (make the overidden object editable from the Outliner beforehand if neccessary -- needed since 5596f79821) - Save file, exit - Open the file again, blender will crash Example attached, put test.blend and source.blend into the same directory and open test.blend The file opens if the link to source is broken by moving them to different directories Stack trace: blender.exe :0x00007FF673A61B30 rna_Object_modifiers_override_apply blender.exe :0x00007FF673A17E60 rna_property_override_operation_apply blender.exe :0x00007FF673A16690 RNA_struct_override_apply blender.exe :0x00007FF6735A0EB0 BKE_lib_override_library_main_update blender.exe :0x00007FF673725D20 blo_read_file_internal blender.exe :0x00007FF67375F550 BLO_read_from_file blender.exe :0x00007FF678A17190 BKE_blendfile_read blender.exe :0x00007FF6736E2010 WM_file_read blender.exe :0x00007FF6733414D0 arg_handle_load_file blender.exe :0x00007FF678894C10 BLI_args_parse blender.exe :0x00007FF6733403C0 main blender.exe :0x00007FF678A0FE74 __scrt_common_main_seh KERNEL32.DLL :0x00007FFB9C3E7020 BaseThreadInitThunk ntdll.dll :0x00007FFB9DB22630 RtlUserThreadStart [test.blend](https://archive.blender.org/developer/F13093858/test.blend) [test.crash.txt](https://archive.blender.org/developer/F13093857/test.crash.txt) [source.blend](https://archive.blender.org/developer/F13093856/source.blend)
Author

Added subscriber: @Keeya

Added subscriber: @Keeya
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This crashed in 3.1.2, yes, it is disabled now though, think this is intentional, will double-check.

This crashed in 3.1.2, yes, it is disabled now though, think this is intentional, will double-check.
Author

Hm, not sure what that means exactly. I tried with this version:
version: 3.3.0 Alpha, branch: master, commit date: 2022-05-19 21:55, hash: f600a2aa6d

and it also crashes.

Hm, not sure what that means exactly. I tried with this version: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-19 21:55, hash: `f600a2aa6d` and it also crashes.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

What I meant was that since 5596f79821, you cannot add the collision modifier (or any modifier really) to the overridden object by default.
You first have to make the overidden object editable from the Outliner.

But yeah, you're right, it still crashes...

What I meant was that since 5596f79821, you cannot add the collision modifier (or any modifier really) to the overridden object by default. You first have to make the overidden object editable from the Outliner. But yeah, you're right, it still crashes...
Member

Added subscribers: @angavrilov, @mont29

Added subscribers: @angavrilov, @mont29
Member

Same thing did not crash before 8f9f65bc29

CC @mont29
CC @angavrilov

Same thing did not crash before 8f9f65bc29 CC @mont29 CC @angavrilov
Philipp Oeser changed title from Crash when opening file that has (physics) modifier on library override object to Regression: crash when opening file that has (physics) modifier on library override object 2022-05-20 14:37:02 +02:00

This issue was referenced by a833c7f4a5

This issue was referenced by a833c7f4a54e24fb3012311636bf7b1949b20eaf

This issue was referenced by 62a2b92b6b

This issue was referenced by 62a2b92b6bef8b01bd4b34f02b188297e1f62c71

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2022-05-23 12:13:13 +02:00
Author

Can confirm it works with nightly 3.2 beta now, thanks a lot. <3

Can confirm it works with nightly 3.2 beta now, thanks a lot. <3
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#98283
No description provided.