Fix T98283: Regression: crash when opening file that has Collision modifier on liboverride object

Some RNA property update callbacks can already generate such modifier,
and only one is allowed per object, so had to adapt code actually adding
new modifiers in liboverride apply codebase.